[package]
name = "tetris"
version = "0.1.0"
authors = ["José Matías Misiego Ruiz <matias.misiego@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
ggez = "0.5.1"
ggez-goodies = "0.5.0"
mint = "0.5.5"
ncollide2d = "0.26.0"
num-traits = "0.2.12"
rand = "0.3.14"
specs = "0.16.1"
specs-derive = "0.4.0"
