[package]
name = "tetris"
version = "0.1.0"
authors = ["José Matías Misiego Ruiz <matias.misiego@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
arrayvec = "0.5.1"
ggez = "0.5.1"
ggez-goodies = "0.5.0"
log = "0.4.11"
mint = "0.5"
ncollide2d = "0.26.0"
num-traits = "0.2.12"
pretty_env_logger = "0.4.0"
rand = "0.3.14"
specs = "0.16.1"
specs-derive = "0.4.0"

[dependencies.nalgebra]
version = "0.23.0"
features = ["mint"]
